Fix board letters not showing on mobile devices

--- a/client/src/Board.css
+++ b/client/src/Board.css
@@ -27,8 +27,8 @@
 }
 
 .box-input {
-  width: 1.75em;
-  height: 1.75em;
+  width: 6rem;
+  height: 6rem;
   text-align: center;
   text-transform: capitalize;
   outline: none;
@@ -74,8 +74,8 @@
   }
 
   .box-input {
-    width: 1.2em;
-    height: 1.2em;
+    width: 4rem;
+    height: 4rem;
     font-size: 2.5em;
   }
 
@@ -96,9 +96,9 @@
   }
 
   .box-input {
-    width: 1.1em;
-    height: 1.1em;
-    font-size: 2em;
+    width: 3.7rem;
+    height: 3.7rem;
+    font-size: 2.4em;
   }
 
   .solve-btn {
